[package]
name = "hashgraph-like-consensus"
version = "0.1.1"
edition = "2024"
description = "A lightweight Rust library for making binary decisions in networks using hashgraph-style consensus"
license = "MIT"
repository = "https://github.com/vacp2p/hashgraph-like-consensus"
keywords = ["consensus", "hashgraph", "voting", "p2p", "gossipsub"]
readme = "README.md"

[dependencies]
prost = "0.13.5"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "full"] }
thiserror = "2.0.17"
sha2 = "0.10.9"
alloy-signer = "1.1.2"
alloy = { version = "1.1.2", features = ["k256", "signer-local"] }
futures = "0.3"
parking_lot = "0.12.5"
async-stream = "0.3.6"

[build-dependencies]
prost-build = "0.13.5"
