[package]
name = "hashgraph-like-consensus"
version = "0.5.0"
edition = "2024"
description = "A lightweight Rust library for making binary decisions in networks using hashgraph-style consensus"
license = "MIT"
repository = "https://github.com/vacp2p/hashgraph-like-consensus"
keywords = ["consensus", "hashgraph", "voting", "p2p", "gossipsub"]
readme = "README.md"

[features]
default = ["ethereum"]
ethereum = ["dep:alloy", "dep:alloy-signer"]

[dependencies]
prost = "0.13.5"
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

thiserror = "2.0.17"
sha2 = "0.10.9"
parking_lot = "0.12.5"

alloy-signer = { version = "1.1.2", optional = true }
alloy = { version = "1.1.2", default-features = false, features = [
    "k256",
    "signer-local",
], optional = true }

[build-dependencies]
prost-build = "0.13.5"
